src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_help_popup.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ Obj┌ Keyboard Shortcuts ────────────────────────────────────────────────┐────┐"
"│{   │                                                                    │    │"
"│  "t│  ── GLOBAL ──                                                      │    │"
"│}   │  F1 or ?        Toggle this help                                   │    │"
"│    │  Ctrl+A         Toggle AI assistant                                │    │"
"│    │  Ctrl+C         Quit without output                                │    │"
"│    │  Enter          Output filtered JSON and exit                      │    │"
"│    │  Ctrl+Q         Output query string only and exit                  │    │"
"│    │  Shift+Tab      Switch focus (Input / Results)                     │    │"
"│    │  q              Quit (in Normal mode or Results pane)              │    │"
"│    │                                                                    │    │"
"│    │  ── INPUT: INSERT MODE ──                                          │    │"
"│    │  Esc            Switch to Normal mode                              │    │"
"│    │  ↑/Ctrl+R       Open history popup                                 │    │"
"│    │  Ctrl+P/N       Previous/Next query in history                     │    │"
"│    │                                                                    │    │"
"│    │  ── INPUT: NORMAL MODE ──                                          │    │"
"│    │  i/a/I/A        Enter Insert mode                                  │    │"
"│    │  h/l            Move cursor left/right                             │    │"
"└────│  0/^/$          Jump to start/end of line                          │────┘"
"┌ Que│  w/b/e          Word navigation                                    │────┐"
"│    │  x/X            Delete character                                   │    │"
"└────│  dd/D           Delete line/to end                                 │────┘"
" F1: └────────────────────────────────────────────────────────────────────┘story"
