src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_input_border_no_ai_hint_when_ai_visible.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ Object ──────────────────────────────────────────────────────────────────────┐"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                      ┌ Not Configured ────────────────────  ┐│"
"│                                      │⚙ AI provider not configured          ││"
"│                                      │                                      ││"
"│                                      │To enable AI assistance, configure a  ││"
"│                                      │provider                              ││"
"│                                      │in ~/.config/jiq/config.toml:         ││"
"│                                      │                                      ││"
"└──────────────────────────────────────└────────── Ctrl+A to close ───────────┘┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctrl+P/N: Cycle History | ↑/Ctrl+R: History"
